<resources>
    <string name="app_name">Coffee Ordering App</string>
    <string name="quantity">Quantity</string>
    <string name="amount">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">ORDER</string>
    <string name="price">Price</string>
    <string name="realPrice">$0.0</string>
    <string name="message">Select order</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="username">Name</string>
    <string name="share_via_mail">Get bill via E-mail</string>
</resources>
